--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,9 @@
     "128": "icons/icon128.png"
   },
   "default_locale": "en",
-  "options_page": "src/options_custom/index.html",
   "browser_action": {
     "default_icon": "icons/icon19.png",
-    "default_title": "browser action demo",
+    "default_title": "Perspective",
     "default_popup": "src/browser_action/browser_action.html"
   },
   "permissions": [
